<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/itemScheduleHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/itemScheduleHour"
                android:gravity="right|bottom"
                android:textSize="@dimen/itemScheduleTitle"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:id="@+id/itemScheduleAMPM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/itemScheduleAMPM"
                android:gravity="right|bottom"
                android:textSize="@dimen/itemScheduleSubtitle"
                android:textColor="@color/colorPrimary"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/speaceItemHourText">

            <TextView
                android:id="@+id/ScheduleConferenceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scheduleConferenceName"
                android:textSize="@dimen/scheduleConferenceName"
                android:textColor="@color/colorPrimaryDark"
                android:ellipsize="end"
                android:lines="1"/>
            <TextView
                android:id="@+id/ScheduleConferenceSpeaker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/scheduleConferenceSpeaker"
                android:text="@string/scheduleConferenceSpeaker"
                android:textColor="@color/colorPrimary"
                android:ellipsize="end"
                android:lines="1"/>
            <TextView
                android:id="@+id/ScheduleTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scheduleTag"
                android:textSize="@dimen/scheduleTag"
                android:textColor="@color/colorWhite"
                android:ellipsize="end"
                android:lines="1"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>